--- a/class 1/index.html
+++ b/class 1/index.html
@@ -6,7 +6,18 @@
     <title>Document</title>
 </head>
 <body>
+ <!-- there are two element 
+ 1.inline element
+ 2.block element -->
+
+
     <h1>hellow world</h1>
     <p>paraghraphy</p>
+    <b>hellow</b>
+    <i>hey</i>
+    <sup>2</sup>
+    <sub>2</sub>
+    <p>Lorem ipsum dolor sit amet consectetur<hr/> adipisicing elit. Beatae quam aspernatur animi architecto officia nisi expedita unde? Cum accusantium expedita quaerat assumenda, sunt eaque ipsum <br/>laboriosam sit magnam cupiditate nulla?</p>
+
 </body>
 </html>
