--- a/class 1/index.html
+++ b/class 1/index.html
@@ -9,7 +9,10 @@
  <!-- there are two element 
  1.inline element
  2.block element -->
-
+<!-- 
+ there are two type of tag
+ 1.self closing tag
+2.jo band ho wo end bhi ho -->
 
     <h1>hellow world</h1>
     <p>paraghraphy</p>
@@ -19,5 +22,9 @@
     <sub>2</sub>
     <p>Lorem ipsum dolor sit amet consectetur<hr/> adipisicing elit. Beatae quam aspernatur animi architecto officia nisi expedita unde? Cum accusantium expedita quaerat assumenda, sunt eaque ipsum <br/>laboriosam sit magnam cupiditate nulla?</p>
 
+<!-- semantic markup -->
+<p>my name is fahad</p>
+<p>what <em>is</em> <strong> name?</strong></p>
+<p>you are right</p>
 </body>
 </html>
