--- a/class 1/index.html
+++ b/class 1/index.html
@@ -26,5 +26,9 @@
 <p>my name is fahad</p>
 <p>what <em>is</em> <strong> name?</strong></p>
 <p>you are right</p>
+<blockquote cite="http://en.wikipedia.org/wiki/
+Winnie-the-Pooh">
+ <p>Did you ever stop to think, and forget to start 
+ again?</p>
 </body>
 </html>
