--- a/class 1/index.html
+++ b/class 1/index.html
@@ -30,5 +30,30 @@
 Winnie-the-Pooh">
  <p>Did you ever stop to think, and forget to start 
  again?</p>
+ <p><q>thus</q></p>
+ <abbr title="world">who</abbr>
+ <cite>hey</cite>
+ <dfn>tm ho</dfn>
+ <p>pre is <del>4999</del></p>
+ <ins>7899</ins>
+
+ <ol>
+     <li>fahad</li>
+     <li>umer</li>
+ </ol>
+ <ul>
+     <li>asad
+         <ol>
+             <li>hamza</li>
+         </ol>
+     </li>
+     <li>umair</li>
+ </ul>
+
+<dl>
+    <dt>fahad</dt>
+    <dd>good boy</dd>
+</dl>
+
 </body>
 </html>
