--- a/classs 2/index.html
+++ b/classs 2/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- <a href="http://www.google.com">google</a> -->
+
+    <!-- <ul>
+        <li><a href="http://www.google.com">google</a></li>
+        <li><a href="http://www.facebook.com">facebook</a></li>
+    </ul> -->
+
+  <ul></ul>
+
 </body>
 </html>
