--- a/classs 2/index.html
+++ b/classs 2/index.html
@@ -13,7 +13,11 @@
         <li><a href="http://www.facebook.com">facebook</a></li>
     </ul> -->
 
-  <ul></ul>
+  <!-- <ul>
+     <li><a href="index.html">Home</a></li>
+      <li><a href="contact.html">contact</a></li>
+      <li><a href="about.html">about</a></li>
+  </ul> -->
 
 </body>
 </html>
