--- a/classs 2/index.html
+++ b/classs 2/index.html
@@ -15,9 +15,11 @@
 
   <!-- <ul>
      <li><a href="index.html">Home</a></li>
-      <li><a href="contact.html">contact</a></li>
-      <li><a href="about.html">about</a></li>
-  </ul> -->
+       <li><a href="contact.html">contact</a></li> -->
+      <!-- <li><a href="about.html" target="_blank">about</a></li> -->
+  <!-- </ul> --> 
+
+<a href="mailto:fk16181@gmail.com">email me</a>
 
 </body>
 </html>
