--- a/classs 2/index.html
+++ b/classs 2/index.html
@@ -19,7 +19,29 @@
       <!-- <li><a href="about.html" target="_blank">about</a></li> -->
   <!-- </ul> --> 
 
-<a href="mailto:fk16181@gmail.com">email me</a>
+<!-- <a href="mailto:fk16181@gmail.com">email me</a> -->
 
+<ul>
+    <li><a href="#about">about</a></li>
+    <li><a href="#contact">contact</a></li>
+</ul>
+<h1 id="about"> about</h1>
+<p >
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae nostrum iste reiciendis voluptates placeat saepe voluptatibus magni sed quia voluptatum explicabo necessitatibus tempore, earum a atque! Eum labore reprehenderit earum?
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim voluptatem laborum cumque reprehenderit quasi ratione obcaecati at maiores est molestiae dolor quibusdam alias, tenetur, perferendis deserunt minus quod? Natus, totam?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime repellat optio ea quam nostrum eveniet exercitationem minima et corrupti sunt, maiores esse, at, recusandae qui commodi delectus deserunt dignissimos quas!
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos numquam explicabo consectetur iste molestias deleniti impedit odio sint quo beatae ab, dolorem quis atque mollitia qui ullam voluptas animi aliquid.
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, dolorum asperiores, at velit officia corrupti, expedita sequi beatae ea maxime amet cupiditate alias! Quaerat soluta mollitia porro voluptatum autem quod!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi commodi voluptatibus explicabo aperiam, fugit architecto ea vitae quas eius eum, dicta ratione impedit culpa voluptas quisquam doloremque temporibus? Quibusdam, alias!
+
+</p>
+<h1 id="contact">contact</h1>
+<p >
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, adipisci quo, iusto laboriosam explicabo, unde atque nostrum assumenda cum temporibus quam officia ullam qui saepe illum quaerat doloremque ea tempora.
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat ipsa harum
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, voluptatibus. Cumque, unde odio recusandae corrupti at placeat quia nam soluta doloribus vitae distinctio dolores earum accusamus hic, eveniet velit nobis?
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio nostrum perferendis quia deleniti magni. Voluptas corrupti maxime atque eum quia minima labore perspiciatis esse eaque, nihil deserunt facere, ab repudiandae.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa delectus quibusdam totam quasi eos, magnam quo vitae voluptatem ipsa corporis iste sit, maxime iure! Maxime expedita praesentium neque saepe nesciunt?Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit necessitatibus consectetur sint aspernatur perferendis earum aperiam nobis sunt, doloremque, rem non quae libero. At debitis, quis provident quos reiciendis aliquid. cupiditate praesentium reiciendis vitae? Natus, non optio delectus repudiandae ab minus inventore obcaecati debitis nihil. Velit esse architecto vitae.
+</p>
 </body>
 </html>
