--- a/classs 2/index.html
+++ b/classs 2/index.html
@@ -21,7 +21,7 @@
 
 <!-- <a href="mailto:fk16181@gmail.com">email me</a> -->
 
-<ul>
+<!-- <ul>
     <li><a href="#about">about</a></li>
     <li><a href="#contact">contact</a></li>
 </ul>
@@ -43,6 +43,14 @@
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio nostrum perferendis quia deleniti magni. Voluptas corrupti maxime atque eum quia minima labore perspiciatis esse eaque, nihil deserunt facere, ab repudiandae.
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa delectus quibusdam totam quasi eos, magnam quo vitae voluptatem ipsa corporis iste sit, maxime iure! Maxime expedita praesentium neque saepe nesciunt?Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit necessitatibus consectetur sint aspernatur perferendis earum aperiam nobis sunt, doloremque, rem non quae libero. At debitis, quis provident quos reiciendis aliquid. cupiditate praesentium reiciendis vitae? Natus, non optio delectus repudiandae ab minus inventore obcaecati debitis nihil. Velit esse architecto vitae.
 </p>
-<a href="#">go to top</a>
+<a href="#">go to top</a> -->
+
+
+
+
+
+
+
+
 </body>
 </html>
