--- a/class 3/index.html
+++ b/class 3/index.html
@@ -23,9 +23,15 @@
 
 <form action="">
 
+<!-- <input type="radio" name="" id="">fahad -->
+<!-- <input type="checkbox" name="" value="helow" id="">fahad -->
 
-    
+<!-- <select name="" id="">
+<option value="">name</option>
+<option selected value="">asad</option>
 
+</select> -->
+<!-- <input type="file" name="" id=""> -->
 </form>
      
 </body>
