--- a/class 3/index.html
+++ b/class 3/index.html
@@ -32,6 +32,17 @@
 
 </select> -->
 <!-- <input type="file" name="" id=""> -->
+
+<!-- <input type="submit" value="submit"> -->
+
+<!-- <input type="image" src="" alt=""> -->
+
+<!-- <label for="">fahad</label> -->
+<!-- <fieldset>
+    <legend>hello</legend>
+</fieldset> -->
+<!-- <input type="search" name="" id=""> -->
+
 </form>
      
 </body>
