--- a/class 4/index.html
+++ b/class 4/index.html
@@ -5,12 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width= , initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- id or class -->
 <!-- div or spam -->
 <!-- div jo hai wo block element hai or span jo hai wo inline hai -->
-
-
+<!-- <iframe src="" frameborder="0"></iframe> -->
+<!-- <iframe src="" frameborder="0"></iframe> -->
+<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/qLz1IIqyeUQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3619.4939086026175!2d67.11101149999999!3d24.881129000000016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33946c7651435%3A0x6438b4965bea3cad!2sProton%20Apollo%20Motors!5e0!3m2!1sen!2s!4v1618654799845!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
+<!-- emoji -->
+<!-- doctype html5 ko reperenst karta hai -->
+<!-- meta  extra inforamtion-->
+<!-- escape charachter -->
+<!-- <h1>hellow</h1> -->
+<h2 style="background-color: blue;">fahad</h2>
 </body>
 </html>
