--- a/class 4/index.html
+++ b/class 4/index.html
@@ -20,6 +20,15 @@
 <!-- meta  extra inforamtion-->
 <!-- escape charachter -->
 <!-- <h1>hellow</h1> -->
-<h2 style="background-color: blue;">fahad</h2>
+<!-- <h2 style="background-color: blue;">fahad</h2> -->
+<!-- universal selected{*} -->
+<!-- type selector{h1,h2,h3} -->
+<!-- child selector{li>a} -->
+<!-- descendant selector -->
+<!-- adjacent selector -->
+<!-- color -->
+<!-- hex code -->
+<!-- rgb color -->
+
 </body>
 </html>
