--- a/class 6/index.html
+++ b/class 6/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>my name is fahad</p>
+    <p>My name is fahad</p>
 </body>
 </html>
