--- a/class 6/index.html
+++ b/class 6/index.html
@@ -8,7 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>My name is fahad</p>
-    <a href="http://www.google.com">google</a>
+    <!-- <p>My name is fahad</p>
+    <a href="http://www.google.com">google</a> -->
+
+
+    <input type="text" name="" id="">
+    <button>sub</button>
+
+    <div class="main">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat dolores delectus amet excepturi nulla earum, iure odio in nostrum culpa voluptas. Molestiae natus molestias, vel iste facilis ab aspernatur.
+             Doloribus.
+        </p>
+    </div>
 </body>
 </html>
