--- a/class 6/index.html
+++ b/class 6/index.html
@@ -20,6 +20,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat dolores delectus amet excepturi nulla earum, iure odio in nostrum culpa voluptas. Molestiae natus molestias, vel iste facilis ab aspernatur.
              Doloribus.
         </p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png" alt="">
     </div>
 </body>
 </html>
