--- a/class 6/index.html
+++ b/class 6/index.html
@@ -19,8 +19,14 @@
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat dolores delectus amet excepturi nulla earum, iure odio in nostrum culpa voluptas. Molestiae natus molestias, vel iste facilis ab aspernatur.
              Doloribus.
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat dolores delectus amet excepturi nulla earum, iure odio in nostrum culpa voluptas. Molestiae natus molestias, vel iste facilis ab aspernatur.
+             Doloribus.
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat dolores delectus amet excepturi nulla earum, iure odio in nostrum culpa voluptas. Molestiae natus molestias, vel iste facilis ab aspernatur.
+             Doloribus.
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat dolores delectus amet excepturi nulla earum, iure odio in nostrum culpa voluptas. Molestiae natus molestias, vel iste facilis ab aspernatur.
+             Doloribus.
         </p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png" alt="">
+        <!-- <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png" alt=""> -->
     </div>
 </body>
 </html>
