--- a/class 6/index.html
+++ b/class 6/index.html
@@ -12,7 +12,7 @@
     <a href="http://www.google.com">google</a> -->
 
 
-    <input type="text" name="" id="">
+    <!-- <input type="text" name="" id="">
     <button>sub</button>
 
     <div class="main">
@@ -25,8 +25,18 @@
              Doloribus.
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat dolores delectus amet excepturi nulla earum, iure odio in nostrum culpa voluptas. Molestiae natus molestias, vel iste facilis ab aspernatur.
              Doloribus.
-        </p>
+        </p> -->
         <!-- <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png" alt=""> -->
-    </div>
+    <!-- </div> -->
+
+    <!-- <div id="di">
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem voluptate praesentium neque quibusdam fugiat a, odio expedita distinctio adipisci. Sequi vel illum dolor quam cum ipsa debitis expedita neque nam!</p>
+
+    </div> -->
+    <ul>
+        <li>fahad</li>
+        <li>khan</li>
+    </ul>
 </body>
+
 </html>
