--- a/class 7/index.html
+++ b/class 7/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <table>
+        <tr>
+            <th>name</th>
+            <th>id</th>
+        </tr>
+        <tr>
+            <td>fahad</td>
+            <td>01</td>
+        </tr>
+    </table>
 </body>
 </html>
