--- a/class 7/index.html
+++ b/class 7/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <table>
+    <!-- <table>
         <tr>
             <th>name</th>
             <th>id</th>
@@ -17,6 +17,23 @@
             <td>fahad</td>
             <td>01</td>
         </tr>
-    </table>
+        <tr>
+            <td>fahad</td>
+            <td>01</td>
+        </tr>
+        <tr>
+            <td>fahad</td>
+            <td>01</td>
+        </tr>
+        <tr>
+            <td>fahad</td>
+            <td>01</td>
+        </tr>
+    </table> -->
+    <form action="">
+        <input type="text" name="id">
+        <input type="text" name="name">
+        <input type="button" value="submit">
+    </form>
 </body>
 </html>
