--- a/class 7/index.html
+++ b/class 7/index.html
@@ -31,9 +31,12 @@
         </tr>
     </table> -->
     <form action="">
+        <fieldset>
+            <legend>login</legend>
         <input type="text" name="id">
         <input type="text" name="name">
-        <input type="button" value="submit">
+       <button>submit</button>
+    </fieldset>
     </form>
 </body>
 </html>
