--- a/class 7/index.html
+++ b/class 7/index.html
@@ -30,13 +30,23 @@
             <td>01</td>
         </tr>
     </table> -->
-    <form action="">
+    <!-- <form action="">
         <fieldset>
             <legend>login</legend>
         <input type="text" name="id">
         <input type="text" name="name">
        <button>submit</button>
     </fieldset>
-    </form>
+    </form> -->
+
+    <div class="black">
+
+    </div>
+    <div class="white">
+
+    </div>
+    <div>
+
+    </div>
 </body>
 </html>
