--- a/class 7/index.html
+++ b/class 7/index.html
@@ -45,8 +45,13 @@
     <div class="white">
 
     </div>
-    <div>
+    <div class="black">
 
     </div>
+    <div class="white">
+
+    </div>
+    <img height="200px" width="200px" src="https://static.wixstatic.com/media/2cd43b_36c3320018034550b2fa3738a2763bec~mv2.png/v1/fill/w_612,h_792,fp_0.50_0.50,q_95/2cd43b_36c3320018034550b2fa3738a2763bec~mv2.png" alt="">
+    
 </body>
 </html>
