--- a/class 7/index.html
+++ b/class 7/index.html
@@ -39,7 +39,7 @@
     </fieldset>
     </form> -->
 
-    <div class="black">
+    <!-- <div class="black">
 
     </div>
     <div class="white">
@@ -52,6 +52,31 @@
 
     </div>
     <img height="200px" width="200px" src="https://static.wixstatic.com/media/2cd43b_36c3320018034550b2fa3738a2763bec~mv2.png/v1/fill/w_612,h_792,fp_0.50_0.50,q_95/2cd43b_36c3320018034550b2fa3738a2763bec~mv2.png" alt="">
-    
+     -->
+
+<div>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
+    <img src="https://image.flaticon.com/icons/png/512/61/61032.png" alt="">
+</div>
+
 </body>
 </html>
