--- a/pra/index.html
+++ b/pra/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
     <h1>fahad</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore molestiae ea sit ad nulla nemo facere cupiditate quisquam voluptatum at praesentium deserunt, magnam molestias neque quia modi dolorem voluptate provident!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, delectus, fugit eos exercitationem, amet temporibus non doloribus natus dolorum accusantium id ducimus eveniet necessitatibus. Laborum eligendi autem ipsa est minima!
+    </p>
 </body>
 </html>
