--- a/pra/index.html
+++ b/pra/index.html
@@ -12,5 +12,9 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore molestiae ea sit ad nulla nemo facere cupiditate quisquam voluptatum at praesentium deserunt, magnam molestias neque quia modi dolorem voluptate provident!
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, delectus, fugit eos exercitationem, amet temporibus non doloribus natus dolorum accusantium id ducimus eveniet necessitatibus. Laborum eligendi autem ipsa est minima!
     </p>
+<div id="box">
+
+</div>
+
 </body>
 </html>
