--- a/pra/index.html
+++ b/pra/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>fahad</h1>
+    <!-- <h1>fahad</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore molestiae ea sit ad nulla nemo facere cupiditate quisquam voluptatum at praesentium deserunt, magnam molestias neque quia modi dolorem voluptate provident!
        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum architecto quo vero unde aut eum cupiditate praesentium eos inventore. Voluptatibus, cumque ipsum id asperiores consectetur itaque iure explicabo distinctio quidem.
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut minus amet illum odit delectus pariatur a, vitae laborum vel eaque corrupti nostrum architecto cum quaerat doloribus omnis nisi tenetur atque
@@ -23,7 +23,8 @@
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit veritatis ut ex omnis ullam suscipit corrupti, voluptatem delectus ipsum excepturi dolorem magnam fugit rerum, cumque minima odio amet voluptas sint.
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis assumenda quos, ipsa repellendus quam doloremque nostrum iste harum quia nam quae distinctio id dolore. Ipsam tempora delectus nihil hic reiciendis.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, delectus, fugit eos exercitationem, amet temporibus non doloribus natus dolorum accusantium id ducimus eveniet necessitatibus. Laborum eligendi autem ipsa est minima!
-    </p>
+    </p> -->
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita asperiores id eum impedit eveniet quasi accusamus quaerat doloremque provident inventore sequi, repellat modi! Et, consectetur unde. Beatae fugit similique dolorum.</p>
 <div id="box">
 
 </div>
