--- a/pra/index.html
+++ b/pra/index.html
@@ -25,9 +25,13 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, delectus, fugit eos exercitationem, amet temporibus non doloribus natus dolorum accusantium id ducimus eveniet necessitatibus. Laborum eligendi autem ipsa est minima!
     </p> -->
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita asperiores id eum impedit eveniet quasi accusamus quaerat doloremque provident inventore sequi, repellat modi! Et, consectetur unde. Beatae fugit similique dolorum.</p>
-<div id="box">
+<!-- <div id="box">
 
-</div>
+</div> -->
+<ul>
+    <li>fahad</li>
+    <li>ali</li>
+</ul>
 
 </body>
 </html>
