--- a/class 7/index.html
+++ b/class 7/index.html
@@ -54,7 +54,7 @@
     <img height="200px" width="200px" src="https://static.wixstatic.com/media/2cd43b_36c3320018034550b2fa3738a2763bec~mv2.png/v1/fill/w_612,h_792,fp_0.50_0.50,q_95/2cd43b_36c3320018034550b2fa3738a2763bec~mv2.png" alt="">
      -->
 
-<div>
+<!-- <div>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
@@ -76,7 +76,42 @@
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quaerat illo eos laudantium doloremque omnis tempora, expedita accusantium reiciendis amet! Expedita veritatis, neque inventore sapiente nulla provident cupiditate quas delectus?</p>
     <img src="https://image.flaticon.com/icons/png/512/61/61032.png" alt="">
-</div>
+</div> -->
+
+
+<h1>First Edition Auctions</h1>
+<table>
+<tr>
+ <th>Author</th>
+ <th>Title</th>
+ <th class="money">Reserve Price</th>
+ <th class="money">Current Bid</th>
+</tr>
+<tr>
+ <td>E.E. Cummings</td>
+ <td>Tulips & Chimneys</td>
+ <td class="money">$2,000.00</td>
+ <td class="money">$2,642.50</td>
+</tr>
+<tr class="even">
+ <td>Charles d'Orleans</td>
+ <td>Poemes</td>
+ <td class="money"></td>
+ <td class="money">$5,866.00</td>
+</tr>
+<tr>
+ <td>T.S. Eliot</td>
+ <td>Poems 1909 - 1925</td>
+ <td class="money">$1,250.00</td>
+ <td class="money">$8,499.35</td>
+</tr>
+<tr class="even">
+ <td>Sylvia Plath</td>
+ <td>The Colossus</td>
+ <td class="money"></td>
+ <td class="money">$1031.72</td>
+</tr>
+</table>
 
 </body>
 </html>
