--- a/class 7/index.html
+++ b/class 7/index.html
@@ -79,7 +79,7 @@
 </div> -->
 
 
-<h1>First Edition Auctions</h1>
+<!-- <h1>First Edition Auctions</h1>
 <table>
 <tr>
  <th>Author</th>
@@ -111,7 +111,26 @@
  <td class="money"></td>
  <td class="money">$1031.72</td>
 </tr>
-</table>
+</table> -->
+<!-- 
+<form action="">
+    <input type="text" name="" id="in1"><br>
+    <input type="text" id="in2"><br>
+    <button>submit</button>
+</form> -->
+
+<div id="black">
+
+</div>
+<div id="white">
+
+</div>
+<div id="black">
+
+</div>
+<div id="white">
+    
+</div>
 
 </body>
 </html>
