--- a/class 7/index.html
+++ b/class 7/index.html
@@ -131,6 +131,7 @@
 <div id="white">
     
 </div>
+<img height="250" width="400" src="https://cdn2.iconfinder.com/data/icons/metallic-objective/512/chess_horse_game_board-512.png" alt="">
 
 </body>
 </html>
