--- a/class 7/index.html
+++ b/class 7/index.html
@@ -119,7 +119,7 @@
     <button>submit</button>
 </form> -->
 
-<div id="black">
+<!-- <div id="black">
 
 </div>
 <div id="white">
@@ -131,7 +131,14 @@
 <div id="white">
     
 </div>
-<img height="250" width="400" src="https://cdn2.iconfinder.com/data/icons/metallic-objective/512/chess_horse_game_board-512.png" alt="">
+<img height="250" width="400" src="https://cdn2.iconfinder.com/data/icons/metallic-objective/512/chess_horse_game_board-512.png" alt=""> -->
+
+<div class="fir">
+    <p>this is example</p>
+</div>
+<div class="sec">
+    <p>this is example1</p>
+</div>
 
 </body>
 </html>
