--- a/class 7/index.html
+++ b/class 7/index.html
@@ -139,6 +139,9 @@
 <div class="sec">
     <p>this is example1</p>
 </div>
-
+<div class="sec">
+    <p>this is example1</p>
+</div>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor itaque veniam saepe quibusdam temporibus ut velit alias autem perferendis quo reiciendis iure illum numquam nulla, rerum sint quas quis minus.</p>
 </body>
 </html>
