--- a/class 7/index.html
+++ b/class 7/index.html
@@ -133,7 +133,7 @@
 </div>
 <img height="250" width="400" src="https://cdn2.iconfinder.com/data/icons/metallic-objective/512/chess_horse_game_board-512.png" alt=""> -->
 
-<div class="fir">
+<!-- <div class="fir">
     <p>this is example</p>
 </div>
 <div class="sec">
@@ -142,6 +142,9 @@
 <div class="sec">
     <p>this is example1</p>
 </div>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor itaque veniam saepe quibusdam temporibus ut velit alias autem perferendis quo reiciendis iure illum numquam nulla, rerum sint quas quis minus.</p>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor 
+    itaque veniam saepe quibusdam temporibus ut velit alias autem perferendis quo reiciendis iur
+    e illum numquam nulla, rerum sint quas quis minus.</p> -->
+    <h1>media query</h1>
 </body>
 </html>
