--- a/class 7/index.html
+++ b/class 7/index.html
@@ -146,5 +146,9 @@
     itaque veniam saepe quibusdam temporibus ut velit alias autem perferendis quo reiciendis iur
     e illum numquam nulla, rerum sint quas quis minus.</p> -->
     <h1>media query</h1>
+    <ul>
+        <li>fahad</li>
+        <li>ali</li>
+    </ul>
 </body>
 </html>
