--- a/class 7/index.html
+++ b/class 7/index.html
@@ -146,9 +146,33 @@
     itaque veniam saepe quibusdam temporibus ut velit alias autem perferendis quo reiciendis iur
     e illum numquam nulla, rerum sint quas quis minus.</p> -->
     <h1>media query</h1>
-    <ul>
+    <!-- <ul>
         <li>fahad</li>
         <li>ali</li>
-    </ul>
+    </ul> -->
+    <!-- <table class="one">
+        <tr>
+         <td>1</td>
+         <td>2</td>
+        </tr>
+        <tr>
+         <td>3</td>
+         <td>4</td>
+        </tr>
+        </table> -->
+        <table class="one">
+            <tr>
+                <th>name</th>
+                <th>id</th>
+                <th>class</th>
+            </tr>
+            <tr>
+                <td>fahad</td>
+                <td>1</td>
+                <td>noraml</td>
+            </tr>
+            <tr></tr>
+            <tr></tr>
+        </table>
 </body>
 </html>
