--- a/class 7/index.html
+++ b/class 7/index.html
@@ -160,7 +160,7 @@
          <td>4</td>
         </tr>
         </table> -->
-        <table class="one">
+        <!-- <table class="one">
             <tr>
                 <th>name</th>
                 <th>id</th>
@@ -173,6 +173,7 @@
             </tr>
             <tr></tr>
             <tr></tr>
-        </table>
+        </table> -->
+        <!-- <a href="http:www.google.com">google</a> -->
 </body>
 </html>
