--- a/class 7/index.html
+++ b/class 7/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
     <!-- <table>
@@ -145,7 +145,7 @@
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor 
     itaque veniam saepe quibusdam temporibus ut velit alias autem perferendis quo reiciendis iur
     e illum numquam nulla, rerum sint quas quis minus.</p> -->
-    <h1>media query</h1>
+    <!-- <h1>media query</h1> -->
     <!-- <ul>
         <li>fahad</li>
         <li>ali</li>
@@ -174,6 +174,14 @@
             <tr></tr>
             <tr></tr>
         </table> -->
-        <!-- <a href="http:www.google.com">google</a> -->
+        <!-- <a href="ht
+            tp:www.google.com">google</a> -->
+
+<div class="black">
+</div>
+<div class="white">
+</div>
+<div class="red"></div>
+
 </body>
 </html>
