--- a/class 7/index.html
+++ b/class 7/index.html
@@ -177,11 +177,20 @@
         <!-- <a href="ht
             tp:www.google.com">google</a> -->
 
-<div class="black">
+<!-- <div class="black">
 </div>
 <div class="white">
 </div>
-<div class="red"></div>
-
+<div class="red"></div> -->
+<div class="ph1">
+<p>this is example</p>
+</div>
+<div class="ph2">
+<p>this is example1</p>
+</div>
+<div class="ph2">
+    <p>this is example2</p>
+    </div>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, et magni autem quod accusantium cupiditate, sed asperiores culpa omnis facilis quas iure voluptates vitae earum porro repellat officia alias nobis?</p>
 </body>
 </html>
