--- a/class 7/index.html
+++ b/class 7/index.html
@@ -182,7 +182,7 @@
 <div class="white">
 </div>
 <div class="red"></div> -->
-<div class="ph1">
+<!-- <div class="ph1">
 <p>this is example</p>
 </div>
 <div class="ph2">
@@ -191,6 +191,25 @@
 <div class="ph2">
     <p>this is example2</p>
     </div>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, et magni autem quod accusantium cupiditate, sed asperiores culpa omnis facilis quas iure voluptates vitae earum porro repellat officia alias nobis?</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, et magni autem quod accusantium cupiditate, sed asperiores culpa omnis facilis quas iure voluptates vitae earum porro
+         repellat officia alias nobis?</p> -->
+
+         <!-- <h1>media</h1>
+         <img height="400" width="700" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png" alt="">
+          -->
+
+          <div class="main">
+              <div class="one">
+           <p>this is paragraphy one</p>
+              </div>
+              <div class="two">
+                <p>this is paragraphy two</p>
+              </div>
+              <div class="three">
+                <p>this is paragraphy three</p>
+              </div>
+              
+
+          </div>
 </body>
 </html>
