--- a/class 7/index.html
+++ b/class 7/index.html
@@ -198,7 +198,7 @@
          <img height="400" width="700" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png" alt="">
           -->
 
-          <div class="main">
+          <!-- <div class="main">
               <div class="one">
            <p>this is paragraphy one</p>
               </div>
@@ -210,6 +210,6 @@
               </div>
               
 
-          </div>
+          </div> -->
 </body>
 </html>
