--- a/class 7/index.html
+++ b/class 7/index.html
@@ -213,7 +213,7 @@
 
           </div> -->
 
-          <div class="container-fuild">
+          <!-- <div class="container-fuild">
               <div class="row">
                   <div class="col-sm">
                     fahad
@@ -228,7 +228,7 @@
               </div>
 
 
-          </div>
+          </div> -->
 
 </body>
 </html>
