--- a/js1/htmlrida.html
+++ b/js1/htmlrida.html
@@ -17,7 +17,7 @@ there are many animals we talk about this presentation.
 <h3>
     Scientists sort the different types of animals in the world into categories based on certain characteristics. 
     
-    <li>birds</li>
+<u> <li>birds</li></u>
 <li>fish</li>
 <li>reptiles</li>
 <li>mammals</li>
