--- a/js1/htmlrida.html
+++ b/js1/htmlrida.html
@@ -49,7 +49,7 @@ toads
   <li>penguins</li>
   <li>pigeons</li>
 
-  <img src="ridzzjpg
+  <img src="ridzz.jpg>
   <a href="http:"//www.google.com">click view</a>
 
 
