--- a/js1/htmlregistrationrida.html
+++ b/js1/htmlregistrationrida.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <h1>Registration form</h1>
+    <h1><center>Registration form</center></h1>
     <div class="register">
         <form method="POST" id="register" action="">
           <h2>register here</h2>
@@ -35,7 +35,11 @@
           <input type="password" name="pass" id="name"
           placeholder="enter your password"><br><br>
           <input type="radio" name="female" id="female"><span 
-          id=""
+          id="femal">&nbsp;female</span>&nbsp;&nbsp;
+          <input type="radio" name="male" id="female"><span 
+          id="femal">&nbsp;male</span>&nbsp;&nbsp;
+          <input type="submit" value="submit" id="sub">
+
           </form>
     </div>
 </body>
