--- a/js2/index.html
+++ b/js2/index.html
@@ -45,8 +45,12 @@
        </table> -->
 
 
-<img src="https://static.digit.in/product/284c81498a93a82db7b5db6600494c20bee4f18e.jpeg?tr=w-1200" alt="" height="200" width="200" onmouseout="abc()">
-<img src="https://whymobile.com/image/1295899" alt="" onmouseover="abc()" >
+<!-- <img src="https://static.digit.in/product/284c81498a93a82db7b5db6600494c20bee4f18e.jpeg?tr=w-1200" alt="" height="200" width="200" onmouseover="src='https://whymobile.com/image/1295899'" onmouseout="src='https://static.digit.in/product/284c81498a93a82db7b5db6600494c20bee4f18e.jpeg?tr=w-1200'"> -->
+
+ <button onClick="myfunction()">Click me</button>
+<p id="demo"></p>
+
+
 </body>
 </html>
 
